--- a/styles/homeCarousel.css
+++ b/styles/homeCarousel.css
@@ -36,7 +36,7 @@ input[type=radio] {
 .card {
   position: absolute;
   width: 60%;
-  height: 100%;
+  height: 80%;
   left: 0;
   right: 0;
   margin: auto;
@@ -201,9 +201,8 @@ img {
     margin-top: 100px;
   }
   .player{
-    position: absolute;
-    top: 85%;
-    left: 25%;
+    position: relative;
+    top: -10%;
     min-width: 220px;
     padding: 5px 5px;
     font-size: 2px;
